API related mails

--- a/app/views/user_mailer/forgot_password_email.html.erb
+++ b/app/views/user_mailer/forgot_password_email.html.erb
@@ -20,22 +20,22 @@
           <td valign="top" colspan="2" style="padding:20px">
             <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Forgot password for Books That Grow.</h2>
             <p style="margin:15px 0; font-size:13px">
-              Dear <%= @name %>,
+              Dear <%= @user_info[:name] %>,
             </p>
             <p style="margin:15px 0; font-size:13px">
               <p style="margin:0 0; font-size:13px">
-                Username: <%= @username %>
+                Username: <%= @user_info[:username] %>
               </p>
               <p style="margin:0 0; font-size:13px">
-                Email Address: <%= @email %>
+                Email Address: <%= @user_info[:email] %>
               </p>
             </p>
             <p style="margin:0 0; font-size:13px">
 			 To reset password click on following
-			 link: <a href = '<%= @link %>'>reset password</a>
+			 link: <a href = '<%= @user_info[:link] %>'>reset password</a>
             </p>
 			<p style="margin:0 0; font-size:13px">
-			  To login to the site, just follow this link: <a href = '<%= @url %>'>login</a>
+			  To login to the site, just follow this link: <a href = '<%= @user_info[:url] %>'>login</a>
 			</p>	
             <p style="margin:15px 0 0; font-size:13px">
               Thanks,
