--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -57,6 +57,7 @@
 <%= javascript_include_tag "required_field_validation.js" %>
 <%= javascript_include_tag "toggles.min.js" %>
 <%= javascript_include_tag "jquery.cookies.js" %>
+<%= javascript_include_tag "login.js" %>
 
 </body>
 </html>
