--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Books That Grow</title>
-<link rel="shortcut icon" href="favicon.ico" type="image/png">
+<%= favicon_link_tag 'favicon.ico' %>
 
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
