--- a/app/views/user_mailer/user_details_changed.html.erb
+++ b/app/views/user_mailer/user_details_changed.html.erb
@@ -11,7 +11,8 @@
         <tr style="background:#1d2939;">
           <td width="30" id="header" style="padding:20px;">
             <a href="javscript:void(0);" >
-				<%= image_tag("http://54.225.184.100/assets/logo.png")%>
+				<%#= image_tag("http://54.225.184.100/assets/logo.png")%>
+        <%= image_tag(@login_url + "/assets/logo.png", :width=>"30px", :height=>"30px"%>
 			</a>
           </td>
           <td width="620" style="font-size:24px; font-weight:bold; text-transform:uppercase; padding:20px; text-align:left; color:#fff">Books That Grow</td>
