--- a/app/views/user_mailer/forgot_password_email.html.erb
+++ b/app/views/user_mailer/forgot_password_email.html.erb
@@ -11,9 +11,8 @@
         <tr style="background:#1d2939;">
           <td width="30" id="header" style="padding:20px;">
             <a href="javscript:void(0);" >
-				<%#= image_tag("http://54.225.184.100/assets/logo.png")%>
-        <%= image_tag(@user_info[:url] + "/assets/logo.png", :width=>"30px", :height=>"30px")%>
-			</a>
+				      <%= image_tag(@user_info[:url] + "/assets/app_icon_60.png")%>
+		      	</a>
           </td>
           <td width="620" style="font-size:24px; font-weight:bold; text-transform:uppercase; padding:20px; text-align:left; color:#fff">Books That Grow</td>
         </tr>
@@ -32,16 +31,16 @@
               </p>
             </p>
             <p style="margin:0 0; font-size:13px">
-			 To reset password click on following
-			 link: <a href = '<%= @user_info[:link] %>'>reset password</a>
+			         To reset password click on following
+			         link: <a href = '<%= @user_info[:link] %>'>reset password</a>
             </p>
-			<p style="margin:0 0; font-size:13px">
-			  To login to the site, just follow this link: <a href = '<%= @user_info[:url] %>'>login</a>
-			</p>	
+			      <p style="margin:0 0; font-size:13px">
+			       To login to the site, just follow this link: <a href = '<%= @user_info[:url] %>'>login</a>
+			      </p>	
             <p style="margin:15px 0 0; font-size:13px">
               Thanks,
             </p>
-            <p style="margin:0 0; font-size:13px">
+            <p style="margin:15px 0; font-size:13px">
               The Books That Grow Team
             </p>
           </td>
