--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -19,10 +19,11 @@
 </div>
 <div class="col-md-5">
 	<%= form_tag('/users/set_new_password', :method => "post", :id=>"reset_password_form", :class=>"form_validation login ng-pristine ng-valid") do %>
-		<%= hidden_field_tag(:email_id, @email_id.blank? ? @a["email"] : @email_id)%>
+		<%= hidden_field_tag(:email_id, @a["email"])%>
 		<%= hidden_field_tag(:username, @a["username"])%>
 		<%= hidden_field_tag(:school_id, @a["school_id"])%>
 		<%= hidden_field_tag(:app_type, @a["a_type"])%>
+		<%= hidden_field_tag(:coupon, @a["coupon"])%>
         <h4 class="nomargin">Reset password</h4>
         <p class="mt5 mb20">Reset password to login and access your account.</p>
 		<%= label_tag 'password_label', "New Password", :class => "form-label"%>
@@ -47,10 +48,11 @@
     </div>
 	<%= form_tag('/users/set_new_password', :method => "post", :id=>"reset_password_form", :class=>"form_validation login ng-pristine ng-valid") do %>
 	    <%unless @user.blank?%><label>Reset password for <%=@user.first_name+" "+@user.last_name.to_s%>. </label><%end%>
-		<%= hidden_field_tag(:email_id, @email_id.blank? ? @a["email"] : @email_id)%>
+		<%= hidden_field_tag(:email_id, @a["email"])%>
 		<%= hidden_field_tag(:username, @a["username"])%>
 		<%= hidden_field_tag(:school_id, @a["school_id"])%>
 		<%= hidden_field_tag(:app_type, @a["a_type"])%>
+		<%= hidden_field_tag(:coupon, @a["coupon"])%>
         <div>
         	<div>
 				<%= password_field_tag 'password', nil, :class=>"", :required=>true, :placeholder => "Password" %><br/>
