--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -24,70 +24,71 @@
 	                </div>
 	                
 	            </div>
-	            <div class="row">
-                    <div class="col-sm-8">
-                        <div class="form-group">
-                        	<%= f.label :description, "Book Description", :class=>"control-label" %>
-		     		        <%= f.text_area :description, :class=>"form-control" %>
-                       	</div>
-                    </div> 
-	            </div>
-
 	            <!-- <div class="row">
                     <div class="col-sm-8">
                         <div class="form-group">
-		     		        <%#= f.label :teacher_description, " Teacher Book Description", :class=>"control-label" %>
-		     		        <%#= f.text_area :teacher_description, :class=>"form-control" %>
+                        	<%#= f.label :description, "Book Description", :class=>"control-label" %>
+		     		        <%#= f.text_area :description, :class=>"form-control" %>
+                       	</div>
+                    </div> 
+	            </div> -->
+				
+				 <div class="row">
+                    <div class="col-sm-8">
+                        <div class="form-group">
+		     		        <%= f.label :teacher_description, " Teacher Book Description", :class=>"control-label" %>
+		     		        <%= f.text_area :teacher_description, :class=>"form-control" %>
                         </div>
                     </div> 
                     <div class="col-sm-8">
                         <div class="form-group">
-		     		        <%#= f.label :student_description, " Student Book Description", :class=>"control-label" %>
-		     		        <%#= f.text_area :student_description, :class=>"form-control" %>
+		     		        <%= f.label :student_description, " Student Book Description", :class=>"control-label" %>
+		     		        <%= f.text_area :student_description, :class=>"form-control" %>
                         </div>
                     </div> 
 	            </div>
 	            <div class="row">
 	            	<div class="col-sm-3">
                         <div class="form-group">
-		     		        <%#= f.label :interest_level_from, " Interest Level From", :class=>"control-label" %>
-		     		        <%#= f.select :interest_level_from, options_for_select(@reading_grades.collect {|g| [ g.grade_short, g.id ] }, :selected=>f.object.interest_level_from), {:prompt=>"Select Interest Level From", :class=>"form-control"} %>
+		     		        <%= f.label :interest_level_from, " Interest Level From", :class=>"control-label" %>
+		     		        <%= f.select :interest_level_from, options_for_select(@reading_grades.collect {|g| [ g.grade_short, g.id ] }, :selected=>f.object.interest_level_from), {:prompt=>"Select Interest Level From", :class=>"form-control"} %>
                         </div>
                     </div>
                     <div class="col-sm-3">
                         <div class="form-group">
-		     		        <%#= f.label :interest_level_to, " Interest Level To", :class=>"control-label" %>
-		     		        <%#= f.select :interest_level_to, options_for_select(@reading_grades.collect {|g| [ g.grade_short, g.id ] }, :selected=>f.object.interest_level_to), {:prompt=>"Select Interest Level To", :class=>"form-control"} %>
+		     		        <%= f.label :interest_level_to, " Interest Level To", :class=>"control-label" %>
+		     		        <%= f.select :interest_level_to, options_for_select(@reading_grades.collect {|g| [ g.grade_short, g.id ] }, :selected=>f.object.interest_level_to), {:prompt=>"Select Interest Level To", :class=>"form-control"} %>
                         </div>
                     </div>
 	            </div>	
 	            <div class="row">
 	            	<div class="col-sm-4">
                         <div class="form-group">
-		     		        <%#= label "reading_level", "Reading Level", :class=>"control-label" %>
-		     		        <%#= select_tag :reading_level, options_for_select(@reading_grades.collect {|g| [ g.grade_short + " (" + g.grade_name + ") " , g.id ] }), {:prompt=>"Select Reading Level", :class=>"form-control"}%>
+		     		        <%= label "reading_level", "Reading Level", :class=>"control-label" %>
+		     		        <%= select_tag :reading_level, options_for_select(@reading_grades.collect {|g| [ g.grade_short + " (" + g.grade_name + ") " , g.id ] }), {:prompt=>"Select Reading Level", :class=>"form-control"}%>
                         </div>
                     </div>
-	            </div>	 -->
-	            <div class="form-row form-group">
+	            </div>	
+	            <!-- Uncomment this -->
+	            <!-- <div class="form-row form-group">
 					<div class="row">
 				    	<div class="col-md-4">
 							<label class="form-label">Small Book Cover</label><span class="asterisk">*</span> 	<br />	
-							<% if f.object.book_cover_file_name && !f.object.book_cover_file_name.blank? %>
-								<%= image_tag f.object.book_cover.url(:small) %>
-							<% end %>
-							<%= f.file_field :book_cover, :class=>"image-file-name"%>
+							<%#= if f.object.book_cover_file_name && !f.object.book_cover_file_name.blank? %>
+								<%#= image_tag f.object.book_cover.url(:small) %>
+							<%#= end %>
+							<%#= f.file_field :book_cover, :class=>"image-file-name"%>
 				    	</div> 
 				    	<div class="col-md-4" >
 							<label class="form-label">EPub Book</label><span class="asterisk">*</span> 	<br />
-							<%if f.object.epub_file_name && !f.object.epub_file_name.blank? %>
-								<%= f.object.epub_file_name %>
-							<% end %>
-							<%= f.file_field :epub, :class=>"image-file-name" %>
+							<%#=if f.object.epub_file_name && !f.object.epub_file_name.blank? %>
+								<%#= f.object.epub_file_name %>
+							<%#= end %>
+							<%#= f.file_field :epub, :class=>"image-file-name" %>
 				    	</div>  
 					</div>
-				</div>
-
+				</div> -->
+				<!-- Uncomment this -->
 	            <!-- <div class="form-row form-group" style="margin-top:50px;">
 					<div class="row">
 				    	<div class="col-md-8">
