--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -65,31 +65,29 @@
 	            	<div class="col-sm-4">
                         <div class="form-group">
 		     		        <%= label "reading_level", "Reading Level", :class=>"control-label" %>
-		     		        <%= select_tag :reading_level, options_for_select(@reading_grades.collect {|g| [ g.grade_short + " (" + g.grade_name + ") " , g.id ] }), {:prompt=>"Select Reading Level", :class=>"form-control"}%>
+		     		        <%= select_tag :reading_level, options_for_select(@reading_grades.collect {|g| [ g.grade_short + " (" + g.grade_name + ") " , g.id ] }, :selected=>@book.book_reading_grades.last.reading_grade_id), {:prompt=>"Select Reading Level", :class=>"form-control"}%>
                         </div>
                     </div>
 	            </div>	
-	            <!-- Uncomment this -->
-	            <!-- <div class="form-row form-group">
+	            <div class="form-row form-group">
 					<div class="row">
 				    	<div class="col-md-4">
 							<label class="form-label">Small Book Cover</label><span class="asterisk">*</span> 	<br />	
-							<%#= if f.object.book_cover_file_name && !f.object.book_cover_file_name.blank? %>
-								<%#= image_tag f.object.book_cover.url(:small) %>
-							<%#= end %>
-							<%#= f.file_field :book_cover, :class=>"image-file-name"%>
+							<% if f.object.book_cover_file_name && !f.object.book_cover_file_name.blank? %>
+								<%= image_tag f.object.book_cover.url(:small) %>
+							<% end %>
+							<%= f.file_field :book_cover, :class=>"image-file-name"%>
 				    	</div> 
 				    	<div class="col-md-4" >
 							<label class="form-label">EPub Book</label><span class="asterisk">*</span> 	<br />
-							<%#=if f.object.epub_file_name && !f.object.epub_file_name.blank? %>
-								<%#= f.object.epub_file_name %>
-							<%#= end %>
-							<%#= f.file_field :epub, :class=>"image-file-name" %>
+							<%if f.object.epub_file_name && !f.object.epub_file_name.blank? %>
+								<%= f.object.epub_file_name %>
+							<% end %>
+							<%= f.file_field :epub, :class=>"image-file-name" %>
 				    	</div>  
 					</div>
-				</div> -->
-				<!-- Uncomment this -->
-	            <!-- <div class="form-row form-group" style="margin-top:50px;">
+				</div>
+				<!-- <div class="form-row form-group" style="margin-top:50px;">
 					<div class="row">
 				    	<div class="col-md-8">
 							<label class="form-label">Preview Book Image</label>	
