--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -140,3 +140,5 @@ hr.school-heading-hr{margin-top: 21px;}
 
 /* Making sign in btn clickable */
 .signin-btn-highlight{}
+	
+.word-wrap{word-wrap: break-word;}	
