added condition in books show

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,7 +23,7 @@
             	</address>
             	<address>
 			    	<strong>Interest Level: </strong>
-			    	<%= @book.interest_level_from + " - " + @book.interest_level_to unless (@book.interest_level_from.blank? || @book.interest_level_to.blank) %>
+			    	<%= @book.interest_level_from + " - " + @book.interest_level_to unless (@book.interest_level_from.blank? || @book.interest_level_to.blank?) %>
             	</address>
             	<address>
 			    	<strong>Reading Level: </strong>
