--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -5,7 +5,7 @@
 	            <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
 	        <div class="panel-body">
-				<%= form_for @book, :html=>{:class=>"form_validation book_form"}, :html => { :multipart => true } do |f| %>
+				<%= form_for @book, :html=>{:class=>"form_validation", :multipart => true } do |f| %>
 					<div id="errorbox">	
 					    <%= render "shared/error_messages", :object=>@book %>
 					</div>
@@ -51,13 +51,13 @@
 	            	<div class="col-sm-4">
                         <div class="form-group">
 		     		        <%= f.label :interest_level_from, " Interest Level From", :class=>"control-label" %><span class="asterisk">*</span> </br>
-		     		        <%= f.select :interest_level_from, options_for_select(@reading_grades.collect {|g| [ g.grade_short, g.id ] }, :selected=>f.object.interest_level_from), {:prompt=>"Select Interest Level From", :class=>"form-control"} %>
+		     		        <%= f.select :interest_level_from, options_for_select(@reading_grades.collect {|g| [ g.grade_short, g.id ] }, :selected=>f.object.interest_level_from), {:prompt=>"Select Interest Level From", :class=>"form-control", :required=>true} %>
                         </div>
 					</div>
                     <div class="col-sm-4">
                         <div class="form-group">
 		     		        <%= f.label :interest_level_to, " Interest Level To", :class=>"control-label" %><span class="asterisk">*</span> </br>
-		     		        <%= f.select :interest_level_to, options_for_select(@reading_grades.collect {|g| [ g.grade_short, g.id ] }, :selected=>f.object.interest_level_to), {:prompt=>"Select Interest Level To", :class=>"form-control"} %>
+		     		        <%= f.select :interest_level_to, options_for_select(@reading_grades.collect {|g| [ g.grade_short, g.id ] }, :selected=>f.object.interest_level_to), {:prompt=>"Select Interest Level To", :class=>"form-control", :required=>true} %>
                         </div>
 						<div id="id_end_msg" class="hide error">Interest Level To should be greater than Interest Level From </div>
                     </div>
@@ -129,9 +129,11 @@
 	        </div><!-- panel-body -->
 	        <div class="panel-footer" data-no-turbolink>
 				<% if action_name.eql?('new') || action_name.eql?('create') %>
-	                <%= f.submit "Submit", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' }, :onclick => "return validateForm();"  %>
+	                <%= f.submit "Submit", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' } %>
+	                <%#= f.submit "Submit", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' }, :onclick => "return validateForm();"  %>
 				<%else%>
-				    <%= f.submit "Update", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Updating...' }, :onclick => "return validateForm();"  %>
+				    <%= f.submit "Update", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Updating...' } %>
+				    <%#= f.submit "Update", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Updating...' }, :onclick => "return validateForm();"  %>
 				<%end%>	
 				<%= link_to 'Return to Book List', books_path, class: "btn btn-white btn-xs"%>
 	        </div>
