--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -5,7 +5,7 @@
 	            <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
 	        <div class="panel-body">
-				<%= form_for @book, :html=>{:class=>"form_validation book_form", :multipart => true } do |f| %>
+				<%= form_for @book, :html=>{:class=>"book_form form_validation", :multipart => true } do |f| %>
 					<div id="errorbox">	
 					    <%= render "shared/error_messages", :object=>@book %>
 					</div>
