--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,11 +14,11 @@
 			    	<%= @book.author %>
             	</address>
             	<address class="word-wrap">
-			    	<strong>Book Teacher Description: </strong>
+			    	<strong>Book Description for Teachers: </strong>
 			    	<%= @book.teacher_description %>
             	</address>
             	<address class="word-wrap"> 
-			    	<strong>Book Student Description: </strong>
+			    	<strong>Book Description for Students: </strong>
 			    	<%= @book.student_description %>
             	</address>
             	<address>
