--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -51,9 +51,9 @@
 								<tr>
 									<td><strong>License Batch Name</strong></td>
 									<td><strong>Expiration Date</strong></td>
-									<td><strong>Licenses allocated to School Admin</strong></td>
-									<td><strong>Licenses allocated to Teacher</strong></td>
-									<td><strong>Licenses allocated to Student</strong></td>
+									<td><strong>Licenses allocated to School Admins</strong></td>
+									<td><strong>Licenses allocated to Teachers</strong></td>
+									<td><strong>Licenses allocated to Students</strong></td>
 									<td><strong>Licenses in Use</strong></td>
 									<td><strong>Unused Licenses</strong></td>
 									<td><strong>Total No. of Licenses</strong></td>
