--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -65,7 +65,7 @@
 	                    <div class="form-group">
 			    	        <%= f.label :country %><br />
   							<%#= f.country_select :country, {priority: %w(US)}, :class=>"country-state-select", prompt: 'Please select a country' %>
-  							<%= f.country_select :country, priority: %w(US CA), prompt: 'Please select a country' %>
+  							<%= f.country_select :country, priority: %w(US), prompt: 'Please select a country' %>
 	                    </div>
 	                </div>
 	                <div class="col-sm-6">
