--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,5 +1,8 @@
 /*common classes */
 .margin-t-10{margin-top:10px;}
+td{vertical-align: middle !important; position: relative;}
+textarea {resize:vertical;}
+input[type=checkbox] {cursor:pointer;}
 
 #error_explanation {
   color: #B94A48;
@@ -34,9 +37,6 @@
 .assign_arrows .btn{padding:3px 20px; background:#e0e0e0; margin-bottom:10px;}
 
 .alert_license_success{ background-color: #dff0d8;border-color: #d6e9c6;color: #3c763d;padding: 10px !important;}
-
-textarea {resize:vertical;}
-input[type=checkbox] {cursor:pointer;}
 
 .logopanel h1 {font-size: 28px !important;}
 .error_box{ font-weight: normal; line-height: 20px; color: #B94A48; display: block; }
@@ -110,14 +110,22 @@ label.error {display:block;}
 .lic-listing-width{width:100px !important;}
 
 /* Quick edit css */
-.invisible{display:none;}
+.invisible{display:none !important;}
 .quick-edit:hover{border: solid 2px #ccc;padding: 5px;margin: -5px;cursor:pointer;}
 .quick-edit{padding:2px;}
 .dropdown-quick-edit:hover{border: solid 2px #ccc;padding: 5px;margin: -5px;cursor:pointer;}
+.empty-quick-edit-field{height: 34px;position: absolute;width: 100%;top: 0;bottom: 0;margin: auto !important;}
 .dropdown-quick-edit{padding:2px;}
 .quick-edit-error-msg{text-align: center;margin: 37px auto 0;position: absolute !important;left: 0;right: 0;z-index: 10;}
 .diasble-arrors{color:black;background:#e0e0e0 !important;cursor:default !important;}
 .enable-arrors{color:#428bca;background:rgba(112, 147, 216, 0.5) !important;cursor:pointer !important;}
+.mask-phone-width{width:110px}
+
+
+/* Loader for quick edit */
+div.loader{ display: none; width:24px; height: 24px;  position: fixed;top: 50%; left: 50%; text-align:center; z-index:2; overflow: auto;z-index: 11}    
+.fade-bg{position: absolute;top: 0;bottom: 0;left: 0;right: 0;background: rgba(255,255,255,0.5);z-index: 10;display: none;}
+.pos-rel{position: relative;}
 
 /* All user search css */
 .all-user-search {margin-bottom: 40px !important;}
