--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,9 @@
 <%= link_to 'Undo', undo_user_users_path(:id=>params[:user_id]) unless params[:user_id].blank? %>
 </div>
   <div class="panel panel-default">
-	<div class="panel-body"> 
+	<div class="panel-body pos-rel"> 
+		<div class="fade-bg"></div>
+		<div class="loader"><%= image_tag("loader5.gif")%></div>
 		<div class="">
 		<%= text_field_tag :text_field_search, '', :placeholder=>'Search text', :class=>"search-box" %>
 		<i class="glyphicon glyphicon-search btn btn-primary btn-xs search-icon-align" id="user_search" title="Search User" >	</i>
@@ -36,12 +38,14 @@
 			<%=link_to 'Download Sample', "", :class=>"btn btn-success btn-xs download_sample", :'data-list_type' => "student", :"data-toggle" => "modal", :"data-target" => "#download_list_modal"  %>
 			<%=link_to 'Import Student List', import_list_users_path(:list_type => "student",:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs"%>
 		<%end%>
-		<%=link_to 'Remove License', "", :class=>"btn btn-success btn-xs bulk-remove-license", :disabled => true %>
+		<%=link_to 'Remove Licenses', "", :class=>"btn btn-success btn-xs bulk-remove-license", :disabled => true %>
+		<%#=link_to 'Add/Update Licenses', "", :class=>"btn btn-success btn-xs bulk-add-update-license", data: { toggle: "modal", target: "#add_update_lic", input: 5} %>
+	
 		<%=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
 	</div>
 	<div class="table-responsive">
 		<table class="table class_common_table" id="users_table">
-            <div class="error-message error quick-edit-error-msg"></div>
+			<div class="error-message error quick-edit-error-msg"></div>
 			<thead>
                 <tr>
                 	<th><%= link_to :All, 'javascript:checkAll("user")', :class => "lnk-typ1" %> | <%= link_to :None, 'javascript:uncheckAll("user")', :class => "lnk-typ2" %></th>
@@ -91,19 +95,19 @@
 							 </td>
 					         <td>
 								 <div class="quick-edit" data-col="phone_number" data-id='<%= user.id%>'><%= user.phone_number %></div>
-							     <input type="text" class="mask-phone invisible dynamic"></input>	 
+							     <input type="text" class="mask-phone mask-phone-width invisible dynamic" value='<%= user.phone_number %>'></input>	 
 							 </td>
 					         <%unless @role_id.name.eql?('Web Admin')%>
 					             <td class=""><%= user.license_expiry_date unless user.license_expiry_date.blank? %></td>
 					         <%end%>
   					         <%if @role_id.name.eql?('Student')%>
 					             <td>
-									 <div class="dropdown-quick-edit" data-col="grade" data-id='<%= user.id%>'><%= ReadingGrade.find(user.grade).grade_short unless  user.grade.blank? %></div>
-									 <%= select_tag :grade, options_from_collection_for_select(@reading_grades,"id", "grade_short"), {:prompt=>"Select Grade Level", :class=>"form-control invisible dropdown-dynamic class-grade"} %>
+									 <div class="dropdown-quick-edit" data-col="grade" data-id='<%= user.id%>'><%= user.grade unless  user.grade.blank? %></div>
+									 <%= select_tag "grade", options_for_select(@reading_grades.collect {|g| [ g.grade_short, g.id]}, :selected=>user.grade), { :prompt=>"Select Grade Level", :class=>"form-control invisible dropdown-dynamic class-grade"} %>
 								 </td>
 					             <td>
-									 <div class="dropdown-quick-edit" data-col="reading_ability" data-id='<%= user.id%>'><%= ReadingGrade.find(user.reading_ability).grade_short + " (" + ReadingGrade.find(user.reading_ability).grade_name + ") " unless user.reading_ability.blank? %></div>
-									 <%= select_tag "reading_ability", options_for_select(@reading_grades.collect {|g| [ g.grade_short + " (" + g.grade_name + ") " , g.grade_short + " (" + g.grade_name + ") " ] }), {:prompt=>"Select Reading Level", :class=>"form-control invisible dropdown-dynamic class-grade"} %>
+									 <div class="dropdown-quick-edit" data-col="reading_ability" data-id='<%= user.id%>'><%= user.reading_ability unless user.reading_ability.blank? %></div>
+									 <%= select_tag "reading_ability", options_for_select(@reading_grades.collect {|g| [ g.grade_short + " (" + g.grade_name + ") " , g.grade_short + " (" + g.grade_name + ") " ] }, :selected=>user.reading_ability), {:prompt=>"Select Reading Level", :class=>"form-control invisible dropdown-dynamic class-grade"} %>
 								 </td>
   					         <%end%>
   					         <td>
@@ -173,6 +177,23 @@
   </div>
 </div>		
 
+<div class="modal fade" id="add_update_lic" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Add/Update License</h4>
+      </div>
+      <div class="modal-body">
+		  <div id="all_school_licenses_list"></div>
+	  </div>
+    </div>
+  </div>
+</div>	
+
+
+
+
 <div class="modal fade" id="download_list_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -217,6 +238,15 @@
 
 
 <script type="text/javascript">
+
+ $('.loader').ajaxStart(function () {
+        $(this).fadeIn('fast');
+        $('.fade-bg').show();
+    }).ajaxStop(function () {
+        $(this).stop().fadeOut('fast');
+        $('.fade-bg').hide();
+  });
+
 	if( <%= @role_id.name.eql?('Web Admin')%>)
 	{
 	    showHideMenu('li_webadmin');	
@@ -233,7 +263,6 @@
 $( ".assign_license" ).click(function() {
           jQuery.get("<%=url_for(:controller=>'users',:action=>'get_user_school_licenses')%>",{ id : $(this).attr('data-input'), role_id:<%=@role_id.id%>},
 function(data) {
-	         
              if(data)
               {
 			   jQuery("#school_licenses_list").html(data);
@@ -261,21 +290,31 @@ $(".download_sample").click(function(){
 });
 
 $(document).ready(function(){
-	var arr_clicked_id = [];
-	$('.user-check-box').click(function(){
-		arr_clicked_id.push($(this).val());
-	});
+  var arr_clicked_id = [];
+  $('.user-check-box').click(function(){
+	arr_clicked_id.push($(this).val());
+  });
 
-	$( ".bulk-remove-license" ).click(function() {
-	          jQuery.get("<%=url_for(:controller=>'users',:action=>'remove_bulk_licenses')%>",{ bulk_remove_user_ids : arr_clicked_id},
+  $( ".bulk-remove-license" ).click(function() {
+    jQuery.get("<%=url_for(:controller=>'users',:action=>'remove_bulk_licenses')%>",{ bulk_remove_user_ids : arr_clicked_id},
 	function(data) {
 	      });
-	});	
+  });	
+  
+  $( ".bulk-add-update-license" ).click(function() {
+		jQuery.get("<%=url_for(:controller=>'users',:action=>'get_all_school_licenses')%>",{ id : $(this).attr('data-input'), selected_user_ids : arr_clicked_id, role_id:<%=@role_id.id%>},
+function(data) {
+             if(data)
+              {
+			   jQuery("#all_school_licenses_list").html(data);
+             }
+      });
+  });
 
-$('.error-message').removeClass('show').addClass('hide');	
-$(".mask-phone").mask("(999) 999-9999");
+  $('.error-message').removeClass('show').addClass('hide');	
+  $(".mask-phone").mask("(999) 999-9999");
 	
-$('#changePassword').click(function() {
+  $('#changePassword').click(function() {
 	$(".form_validation").validate({
 		rules: {
 			"user[password]":{ minlength: 5, required: true} ,
@@ -295,6 +334,28 @@ $('#changePassword').click(function() {
 		});
 });
 });
+
+$( ".quick-edit" ).mouseover(function() {
+		if ($(this).text() == '')
+		{
+			$(this).addClass('empty-quick-edit-field');
+		}
+		else
+		{
+			$(this).removeClass('empty-quick-edit-field');
+		}
+});	
+
+$( ".dropdown-quick-edit" ).mouseover(function() {
+		if ($(this).text() == '')
+		{
+			$(this).addClass('empty-quick-edit-field');
+		}
+		else
+		{
+			$(this).removeClass('empty-quick-edit-field');
+		}
+});	
 
 $.valHooks.textarea = {
     get: function(elem) {
@@ -341,6 +402,13 @@ $(".dynamic").keydown(function(e) {
 	 }
 });
 $(".dynamic").blur(function(e) {
+	$('.loader').ajaxStart(function () {
+        $(this).fadeIn('fast');
+        $('.fade-bg').show();
+    }).ajaxStop(function () {
+        $(this).stop().fadeOut('fast');
+        $('.fade-bg').hide();
+    });
    update_on_quick_edit($(this));
 });
 
