Importing file issues

--- a/app/views/schools/import.html.erb
+++ b/app/views/schools/import.html.erb
@@ -38,7 +38,7 @@
 	         	</div>	
 	         </div>
 	         <div width="50%" align="right" style="border : 1px solid #CCCCCC; border-radius : 10px; float: right; padding: 30px;">
-	         	<p>Let me Correct all the data and upload the List again </p>
+	         	<p>Let me correct all the data and upload the list again </p>
 	         	<div style="text-align: center;">
 	         		<%= link_to "Upload Again", :action => :import_list %>
 	         	</div>	
