--- a/app/views/classrooms/classroom_info.html.erb
+++ b/app/views/classrooms/classroom_info.html.erb
@@ -1,5 +1,5 @@
 <%unless @classroom.blank?%>
-	Teachers: <%@classroom.users.un_archived.teachers.each do |teacher|%>
+	Teachers: <%@classroom.users.un_archived.all_teachers.each do |teacher|%>
 				<%=teacher.get_full_name%></br>
 	<%end%><br/>
 	No.of Students: <%=@classroom.users.un_archived.students.count%>
